--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -93,7 +93,7 @@
 
     <RadioGroup
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_alignParentTop="true"
             android:layout_alignLeft="@+id/centThreshold"
@@ -126,7 +126,12 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/sharpText"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="0dp"
         class="net.zllr.precisepitch.CenterOffsetView" />
+    <view android:layout_width="83dp"
+          android:layout_height="161dp"
+          class="net.zllr.precisepitch.StaffView" android:id="@+id/staffView"
+          android:layout_alignParentLeft="true"
+          android:layout_below="@+id/centView"/>
 
 </RelativeLayout>
