o better alignment of views.

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -124,14 +124,14 @@
         android:id="@+id/centView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/sharpText"
+        class="net.zllr.precisepitch.CenterOffsetView"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="0dp"
-        class="net.zllr.precisepitch.CenterOffsetView" />
+        android:layout_above="@+id/noteDisplay"/>
     <view android:layout_width="83dp"
           android:layout_height="161dp"
           class="net.zllr.precisepitch.StaffView" android:id="@+id/staffView"
           android:layout_alignParentLeft="true"
-          android:layout_below="@+id/centView"/>
+          android:layout_below="@+id/centView"
+          android:layout_alignBottom="@+id/frequencyDisplay"/>
 
 </RelativeLayout>
