--- a/res/layout/activity_precise_pitch_home.xml
+++ b/res/layout/activity_precise_pitch_home.xml
@@ -13,8 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
-        
-    </ListView>
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
