--- a/res/layout/practice.xml
+++ b/res/layout/practice.xml
@@ -7,7 +7,7 @@
 
     <view android:layout_height="0px"
           android:layout_weight="1"
-          class="net.zllr.precisepitch.StaffView" android:id="@+id/staff"
+          class="net.zllr.precisepitch.StaffView" android:id="@+id/practiceStaff"
           android:layout_width="match_parent"
           android:layout_gravity="left|center_vertical"/>
 
