--- a/res/layout/practice.xml
+++ b/res/layout/practice.xml
@@ -13,14 +13,37 @@
     <RelativeLayout android:layout_weight="2"
                   android:layout_height="0px"
                   android:layout_width="match_parent">
+        <!-- for first test: have a couple of buttons -->
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Game"
-                android:id="@+id/newPracticeSequence"
+                android:text="Random"
+                android:id="@+id/newRandom"
                 android:layout_marginTop="10dp"
                 android:layout_alignLeft="@+id/practiceStaff"
                 android:layout_below="@+id/practiceStaff"/>
+
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cm"
+                android:id="@+id/newCMajor"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/practiceStaff"
+                android:layout_toRightOf="@+id/newRandom"
+                android:paddingStart="30dp"
+                android:paddingEnd="30dp"/>
+
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Gm"
+                android:id="@+id/newGMajor"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/practiceStaff"
+                android:layout_toRightOf="@+id/newCMajor"
+                android:paddingEnd="30dp"
+                android:paddingStart="30dp"/>
 
         <view
                 android:layout_width="wrap_content"
@@ -29,19 +52,38 @@
                 class="net.zllr.precisepitch.CenterOffsetView"
                 android:id="@+id/practiceLedDisplay"
                 android:layout_centerHorizontal="true"
-                android:layout_below="@+id/newPracticeSequence"/>
+                android:layout_below="@+id/practiceStaff"/>
 
         <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="(instructions)"
-                android:id="@+id/textView"
+                android:id="@+id/practiceInstructions"
                 android:layout_gravity="center"
                 android:textSize="30dp"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/practiceLedDisplay"
                 android:layout_marginTop="10dp"
                 android:textIsSelectable="false"/>
+
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Start"
+                android:id="@+id/practiceStartButton"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/practiceInstructions"
+                android:layout_centerHorizontal="true"
+                android:paddingEnd="40dp"
+                android:paddingStart="40dp"/>
+
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Restart"
+                android:id="@+id/practiceRestartButton"
+                android:layout_toRightOf="@+id/practiceStartButton"
+                android:layout_alignTop="@+id/practiceStartButton"/>
 
     </RelativeLayout>
 </LinearLayout>
