o Basic game setup.

--- a/res/layout/game_setup.xml
+++ b/res/layout/game_setup.xml
@@ -7,7 +7,7 @@
 
     <view android:layout_weight="1"
           android:layout_width="match_parent"
-          android:layout_height="253dp"
+          android:layout_height="0dp"
           class="net.zllr.precisepitch.view.StaffView"
           android:id="@+id/gameSetupStaff" />
 
@@ -76,8 +76,15 @@
                 android:layout_toRightOf="@+id/newFMajor"/>
     </LinearLayout>
 
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="(instructions)"
+            android:textSize="30dp"
+            android:id="@+id/gameSetupInstructions"
+            android:layout_gravity="center_horizontal"/>
+
     <LinearLayout
-            android:layout_weight="1"
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
