o Record histogram for game play. o Give instructions to player.

--- a/res/layout/game_play.xml
+++ b/res/layout/game_play.xml
@@ -24,6 +24,16 @@
           class="net.zllr.precisepitch.view.StaffView"
           android:id="@+id/gameStaff" />
 
+    <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="(instructions)"
+            android:id="@+id/gameInstructions"
+            android:layout_gravity="center"
+            android:textSize="30dp"
+            android:layout_centerHorizontal="true"
+            android:textIsSelectable="false"/>
+
     <Button
             android:layout_weight="1"
             android:layout_width="wrap_content"
