o Chain the player games.

--- a/res/layout/game_play.xml
+++ b/res/layout/game_play.xml
@@ -38,8 +38,8 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Next Player"
-            android:id="@+id/nextPlayer"
+            android:text="Next in Game"
+            android:id="@+id/nextInGame"
             android:padding="20dp"
             android:layout_gravity="right|bottom"
             android:textSize="@dimen/large_button_text"
