--- a/res/layout/activity_car_race_animation.xml
+++ b/res/layout/activity_car_race_animation.xml
@@ -8,9 +8,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".CarRaceAnimation" >
 
-    <TextView
+    <view
+        android:id="@+id/car_race_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        class="net.zllr.precisepitch.CarRaceView" />
 
 </RelativeLayout>
