--- a/res/layout/practice.xml
+++ b/res/layout/practice.xml
@@ -60,8 +60,15 @@
                     android:layout_width="0px"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:text="Start Over"
-                    android:id="@+id/practiceRestartButton"/>
+                    android:text="New Practice"
+                    android:id="@+id/newPractice"/>
+
+            <Button
+                    android:layout_width="0px"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="I can do better!"
+                    android:id="@+id/canDoBetterButton"/>
         </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
